--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -3,16 +3,15 @@
   "version": "0.1",
   "description": "Trip idea clipper.",
   "manifest_version": 2,
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": true
-  },
   "browser_action": {
     "default_title": "Lobster Ice Cream Sidebar",
+    "default_icon": "./assets/lobster.jpg",
     "default_popup": "popup.html"
   },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content.js"]
+  }],
   "web_accessible_resources": [
     "assets/*"
   ],
@@ -21,6 +20,8 @@
     "http://*/*",
     "tabs",
     "webRequest",
-    "webRequestBlocking"
+    "webRequestBlocking",
+    "storage",
+    "activeTab"
   ]
 }
