--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -10,6 +10,7 @@
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
+    "css": ["content.css"],
     "js": ["content.js"]
   }],
   "web_accessible_resources": [
