--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,11 +20,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }} (server)
+    - name: Setup and run tests ${{ matrix.node-version }} (server)
+      working-directory: ./server 
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}  
-      working-directory: ./server 
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
