--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,10 @@ on:
 jobs:
   build:
 
+    defaults:
+      run:
+        working-directory: ./server
+
     runs-on: ubuntu-latest
 
     strategy:
@@ -21,7 +25,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup and run tests ${{ matrix.node-version }} (server)
-      working-directory: ./server
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
