--- a/webapp-client/package.json
+++ b/webapp-client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "nodemon": "^2.0.4",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-view": "^2.3.2"
