--- a/webapp-client/.prettierrc
+++ b/webapp-client/.prettierrc
@@ -4,5 +4,6 @@
   "singleQuote": true,
   "semi": true,
   "tabWidth": 2,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "trailingComma": "es5"
 }
