--- a/webapp-client/package.json
+++ b/webapp-client/package.json
@@ -10,6 +10,8 @@
     "react-view": "^2.3.2"
   },
   "devDependencies": {
+    "prettier": "^2.0.5",
+    "eslint-config-google": "^0.14.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
