--- a/webapp-client/.prettierrc
+++ b/webapp-client/.prettierrc
@@ -5,5 +5,6 @@
   "semi": true,
   "tabWidth": 2,
   "endOfLine": "auto",
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "bracketSpacing": false
 }
