--- a/webapp-client/package.json
+++ b/webapp-client/package.json
@@ -6,6 +6,8 @@
     "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-view": "^2.3.2"
   },
