google.identity get user info background content messaging

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -15,6 +15,10 @@
   "web_accessible_resources": [
     "assets/*"
   ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": true
+    },
   "permissions": [
     "https://*/*",
     "http://*/*",
@@ -23,6 +27,12 @@
     "webRequestBlocking",
     "storage",
     "activeTab",
-    "contextMenus"
-  ]
+    "contextMenus",
+    "identity",
+    "identity.email"
+  ],
+  "oauth2": {
+    "client_id": "37652710111-9i14b191phogsofqh3cn99fripb8brpf.apps.googleusercontent.com",
+    "scopes":[""]
+  }
 }
