--- a/webapp-client/package.json
+++ b/webapp-client/package.json
@@ -10,6 +10,7 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-view": "^2.3.2"
   },
   "devDependencies": {
